# Meridian

./: .gitignore  README.md  docker-compose.yml  llm.text  llms.txt
cpp/: CMakeLists.txt
cpp/src/: db.cpp  db.hpp  engine.cpp  engine.hpp  fetcher.cpp  fetcher.hpp  main.cpp
db/: schema.sql
landing/: index.html
python/: requirements.txt
python/meridian/: __init__.py  agents.py  api.py  backtest.py  cli.py  config.py  dom_analyzer.py  scoring.py  storage.py  types.py  worker.py
tests/: test_scoring.py
